k8s/provisioner.yaml
---
# Source: provisioner/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: provisioner
  namespace: vex
  labels:
    helm.sh/chart: provisioner-0.1.0
    app.kubernetes.io/name: provisioner
    app.kubernetes.io/instance: provisioner
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: provisioner
      app.kubernetes.io/instance: provisioner
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/name: provisioner
        app.kubernetes.io/instance: provisioner
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: provisioner
          securityContext:
            {}
          image: "broswen/vex-provisioner:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 150m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
