k8s/vex-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: vex
  namespace: vex
spec:
  selector:
    app: vex
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
